// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsHistoryContainer View should render PointsHistory container Correctly 1`] = `
<PointsHistory
  className=""
  getPointsHistoryAction={[Function]}
  labels={[Function]}
  pointHistory={[Function]}
  router={
    Object {
      "query": Object {
        "id": "addressBook",
      },
    }
  }
/>
`;

exports[`PointsHistoryContainer View should render PointsHistoryContainer Correctly 1`] = `
<PointsHistory
  className=""
  getPointsHistoryAction={[Function]}
  labels={[Function]}
  pointHistory={[Function]}
/>
`;
